--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="prose dark:prose-invert prose-headings:underline prose-h1:text-xl prose-h1:font-bold prose-p:text-justify prose-a:text-blue-600 prose-img:rounded-xl"
+  class="prose dark:prose-invert prose-h1:text-xl prose-h1:font-bold prose-p:text-justify prose-a:text-black prose-img:rounded-xl dark:prose-a:text-white"
 >
   <slot />
 </div>
