:wrench: FInalize with dotfiles

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="prose text-black dark:prose-invert prose-p:text-justify prose-a:text-black hover:prose-a:text-white prose-code:text-black prose-code:before:content-none prose-code:after:content-none prose-img:rounded-xl dark:text-white dark:prose-a:text-white"
+  class="prose text-black dark:prose-invert marker:text-black prose-p:text-justify prose-a:text-black hover:prose-a:text-white prose-code:text-black prose-code:before:content-none prose-code:after:content-none prose-img:rounded-xl dark:text-white dark:marker:text-white dark:prose-a:text-white"
 >
   <slot />
 </div>
